fix: video controls on safari

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -268,6 +268,13 @@
       width: 100%;
       height: 100%;
       margin-top: 3rem;
+      z-index: 2147483647;
+      &::-webkit-media-controls {
+        display: none !important;
+      }
+      &::-webkit-media-controls-start-playback-button {
+        display: none !important;
+      }
     }
     &_hiden {
       opacity: 0;
